--- a/css/2-2.css
+++ b/css/2-2.css
@@ -4,7 +4,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
 }
 .textContainer {
     padding: 60px 0 10px 8em;
@@ -19,7 +19,9 @@ body {
 }
 .options {
     text-align: center;
-    text-justify: start;
+}
+.left, .right {
+    text-decoration: none;
 }
 #left {
     margin-right: 5em;
@@ -43,6 +45,9 @@ body {
         margin-right: 0;
         margin-bottom: 3em;
     }
+    #right {
+        margin-bottom: 3em;
+    }
 }
 @media (max-width: 576px) {
     .textContainer {
@@ -50,5 +55,21 @@ body {
     }
     #left, #right {
         width: 200px;
+    }
+}
+@media (max-width: 380px) {
+    .text {
+        font-size: xx-small;
+    }
+}
+@media (max-height: 500px) {
+    .text {
+        font-size: 15px;
+    }
+    #left, #right {
+        width: 200px;
+    }
+    #left {
+        margin-right: 50px;
     }
 }
