--- a/css/4-2.css
+++ b/css/4-2.css
@@ -4,7 +4,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
 }
 .textContainer {
     padding: 60px 0 10px 8em;
@@ -19,6 +19,9 @@ body {
 .options {
     text-align: center;
     margin-top: 3em;
+}
+.left, .right {
+    text-decoration: none;
 }
 #left {
     margin-right: 5em;
@@ -47,5 +50,25 @@ body {
     }
     #left, #right {
         width: 200px;
+    }
+}
+@media (max-width: 380px) {
+    .text {
+        font-size: xx-small;
+    }
+}
+@media (max-height: 500px) {
+    .textContainer {
+        padding: 60px 0 0px 3em;
+    }
+    .text {
+        font-size: 15px;
+    }
+    #left, #right {
+        width: 200px;
+    }
+    #left {
+        margin-right: 50px;
+        margin-bottom: 0;
     }
 }
