add: background music & change gif image

--- a/css/3-3.css
+++ b/css/3-3.css
@@ -1,6 +1,6 @@
 #slip {
     height: 100vh;
-    background-image: url("../assets/Forest/background.png");
+    background-image: url("../assets/Forest/backgroundGIF.gif");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
