--- a/css/2-1.css
+++ b/css/2-1.css
@@ -1,3 +1,7 @@
+@import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
+* {
+    font-family: "Noto Sans TC";
+}
 body {
     height: 100vh;
     background-image: url("../assets/Color/background.png");
@@ -7,15 +11,25 @@ body {
     /* overflow-y: hidden; */
 }
 .textContainer {
-    padding: 60px 0 10px 8em;
+    text-align: center;
+    padding-top: 7em;
+    padding-bottom: 4em;
     margin-bottom: 2em;
 }
-#bottomText {
-    margin-left: 30px;
-}
-.text {
+p {
     color: #7D7D7D;
-    font-size: 20px;
+    font-size: 24px;
+    margin: 0;
+}
+#upText {
+    white-space: pre;
+    margin-bottom: 10px;
+}
+#upText:before {
+    content: "＿＿    ";
+}
+#upText:after {
+    content: "                          "
 }
 .options {
     text-align: center;
@@ -24,10 +38,10 @@ body {
     text-decoration: none;
 }
 #left {
-    margin-right: 5em;
+    margin-right: 12em;
 }
 #left, #right {
-    width: 350px;
+    width: 250px;
     cursor: pointer;
 }
 @media (max-width: 768px) {
@@ -35,7 +49,7 @@ body {
         padding: 60px 0 10px 50px;
         margin-bottom: 2em;
     }
-    .text {
+    p {
         font-size: small;
     }
     #left, #right {
@@ -58,12 +72,12 @@ body {
     }
 }
 @media (max-width: 380px) {
-    .text {
+    p {
         font-size: xx-small;
     }
 }
 @media (max-height: 500px) {
-    .text {
+    p {
         font-size: 15px;
     }
     #left, #right {
