--- a/css/end.css
+++ b/css/end.css
@@ -1,3 +1,7 @@
+@import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
+* {
+    font-family: "Noto Sans TC";
+}
 body {
     /* overflow-y: hidden; */
     cursor: pointer;
@@ -14,34 +18,34 @@ body {
 }
 p {
     margin: 2px;
-    font-size: 25px;
+    font-size: 28px;
     color: transparent;
     animation: blur 10s ease-out alternate;
 	-webkit-animation: blur 10s ease-out alternate;
     animation-fill-mode: forwards;
 }
-@media screen and (max-height: 900px) {
+@media screen and (max-height: 500px) {
     p {
         font-size: 20px;
     }
 }
 @keyframes blur {
-	0%      {text-shadow: 0 0 100px #434343; opacity: 0;}
-	10%	    {text-shadow: 0 0 90px #434343;}
+	0%      {text-shadow: 0 0 100px #7D7D7D; opacity: 0;}
+	10%	    {text-shadow: 0 0 90px #7D7D7D;}
 	20%	    {opacity: 1;}
-	30%	    {text-shadow: 0 0 0px #434343;}
-	75%	    {text-shadow: 0 0 0px #434343;}
+	30%	    {text-shadow: 0 0 0px #7D7D7D;}
+	75%	    {text-shadow: 0 0 0px #7D7D7D;}
 	80%	    {opacity: 1;}
-	90%	    {text-shadow: 0 0 0px #434343;}
-	100%    {text-shadow: 0 0 0px #434343; opacity: 1;}
+	90%	    {text-shadow: 0 0 0px #7D7D7D;}
+	100%    {text-shadow: 0 0 0px #7D7D7D; opacity: 1;}
 }
 @-webkit-keyframes blur {
-	0%		{text-shadow: 0 0 100px #434343; opacity: 0;}
-	10%		{text-shadow: 0 0 90px #434343;}
+	0%		{text-shadow: 0 0 100px #7D7D7D; opacity: 0;}
+	10%		{text-shadow: 0 0 90px #7D7D7D;}
 	20%		{opacity: 1;}
-	30%		{text-shadow: 0 0 0px #434343;}
-	75%		{text-shadow: 0 0 0px #434343;}
+	30%		{text-shadow: 0 0 0px #7D7D7D;}
+	75%		{text-shadow: 0 0 0px #7D7D7D;}
 	80%		{opacity: 1;}
-	90%		{text-shadow: 0 0 0px #434343;}
-	100%	{text-shadow: 0 0 0px #434343; opacity: 1;}
+	90%		{text-shadow: 0 0 0px #7D7D7D;}
+	100%	{text-shadow: 0 0 0px #7D7D7D; opacity: 1;}
 }
