--- a/css/3-4.css
+++ b/css/3-4.css
@@ -1,3 +1,7 @@
+@import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
+* {
+    font-family: "Noto Sans TC";
+}
 body {
     height: 100vh;
     background-image: url("../assets/Factory/background.png");
@@ -7,15 +11,29 @@ body {
     /* overflow-y: hidden; */
 }
 .textContainer {
-    padding: 60px 0 10px 8em;
-    margin-bottom: 8em;
+    width: auto;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 7em;
+    padding-bottom: 6em;
+    margin-bottom: 2em;
 }
-#bottomText {
-    margin-left: 30px;
+.wrapper {
+    text-align: center;
+    background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0) 100%);}
+p {
+    color: #FFFFFF;
+    font-size: 24px;
+    margin: 20px;
 }
-.text {
-    color: #D5D2CF;
-    font-size: 20px;
+#upText {
+    white-space: pre;
+    margin-bottom: 10px;
+}
+#upText:before {
+    content: "＿＿    ";
 }
 .options {
     text-align: center;
@@ -35,7 +53,7 @@ body {
         padding: 60px 0 10px 50px;
         margin-bottom: 7em;
     }
-    .text {
+    p {
         font-size: small;
     }
     #left, #right {
@@ -55,7 +73,7 @@ body {
     }
 }
 @media (max-width: 380px) {
-    .text {
+    p {
         font-size: xx-small;
     }
 }
@@ -63,7 +81,7 @@ body {
     .textContainer {
         margin-bottom: 2em;
     }
-    .text {
+    p {
         font-size: 15px;
     }
     #left, #right {
