--- a/css/start.css
+++ b/css/start.css
@@ -1,3 +1,7 @@
+@import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
+* {
+    font-family: "Noto Sans TC";
+}
 body {
     height: 100vh;
     background-image: url("../assets/Start/background.jpg");
@@ -15,11 +19,12 @@ body {
     text-align: center;
 }
 p {
-    font-size: 23px;
+    font-size: 24px;
     color: #7D7D7D;
+    display: inline-block;
 }
 #start {
-    width: 250px;
+    width: 300px;
     cursor: pointer;
 }
 @media screen and (max-width: 900px) {
@@ -41,7 +46,7 @@ p {
         width: 180px;
     }
     p {
-        font-size: 18px;
+        font-size: 20px;
     }
 }
 @media screen and (max-width: 576px) {
@@ -50,15 +55,12 @@ p {
         padding: 5em 0 0 0;
     }
     #plancovary {
-        width: 150px;
+        width: 200px;
     }
 }
 @media screen and (max-height: 900px) {
     #upText {
         margin-top: 5em;
-    }
-    p {
-        margin-top: 40px;
     }
     #start {
         padding-top: 7em;
@@ -68,10 +70,7 @@ p {
     #upText {
         margin-top: 3em;
     }
-    p {
-        margin-top: 40px;
-    }
     #start {
-        padding-top: 3em;
+        padding-top: 2em;
     }
 }
