--- a/css/3-1.css
+++ b/css/3-1.css
@@ -1,6 +1,7 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
 * {
     font-family: "Noto Sans TC";
+    font-weight: 400;
 }
 body {
     height: 100vh;
@@ -8,7 +9,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /* overflow-y: hidden; */
+    overflow-y: hidden;
 }
 .textContainer {
     text-align: center;
@@ -17,8 +18,11 @@ body {
 }
 p {
     color: #7D7D7D;
-    font-size: 24px;
+    font-size: 22px;
     margin: 0;
+}
+#brOne {
+    display: none;
 }
 #upText {
     white-space: pre;
@@ -33,6 +37,9 @@ p {
 #bottomText:after {
     content: "                                                  "
 }
+#upText, #middleText {
+    display: inline-block;
+}
 .options {
     text-align: center;
 }
@@ -46,41 +53,32 @@ p {
     width: 250px;
     cursor: pointer;
 }
-@media (max-width: 768px) {
+@media (max-width: 565px) {
     .textContainer {
-        padding: 60px 0 10px 50px;
+        padding: 72px 48px 0;
+        margin-bottom: 2em;
     }
     p {
-        font-size: small;
+        font-size: 18px;
     }
-    #left, #right {
-        width: 250px;
+    #brOne {
+        display: inherit;
+    }
+    #upText:after {
+        content: "         ";
+    }
+    #bottomText {
+        white-space: normal;
+        margin-top: 7px;
     }
     #left {
-        margin: 0 0 20px 0;
+        margin-right: 0;
+        margin-bottom: 15px;
     }
-}
-@media (max-width: 576px) {
-    .textContainer {
-        padding: 30px 0 10px 50px;
-    }
-    #left, #right {
-        width: 200px;
-    }
-}
-@media (max-width: 380px) {
-    p {
-        font-size: xx-small;
-    }
-}
-@media (max-height: 500px) {
-    p {
-        font-size: 15px;
+    .options {
+        padding: 0 50px;
     }
     #left, #right {
-        width: 200px;
-    }
-    #left {
-        margin-right: 50px;
+        width: 150px;
     }
 }
