--- a/css/3-3.css
+++ b/css/3-3.css
@@ -1,6 +1,7 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
 * {
     font-family: "Noto Sans TC";
+    font-weight: 400;
 }
 #slip {
     height: 100vh;
@@ -17,7 +18,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /* overflow-y: hidden; */
+    overflow-y: hidden;
 }
 .textContainer {
     text-align: center;
@@ -27,11 +28,11 @@
 }
 p {
     color: #FFFFFF;
-    font-size: 24px;
+    font-size: 22px;
     margin: 0;
 }
 #upText {
-    white-space: pre;
+    white-space: pre-wrap;
     margin-bottom: 10px;
 }
 #upText:before {
@@ -59,10 +60,18 @@ p {
     width: 220px;
     cursor: pointer;
 }
-@media (max-width: 768px) {
+@media (max-width: 565px) {
     .textContainer {
-        padding: 60px 0 10px 50px;
-        margin-bottom: 2em;
+        padding: 72px 64px 0;
+    }
+    p {
+        font-size: 18px;
+    }
+    #upText {
+
+    }
+    #bottomText {
+        white-space: normal;
     }
     #topLeft, #topRight {
         margin-top: 2em;
@@ -70,43 +79,10 @@ p {
     #bottomLeft, #bottomRight {
         margin-top: 2em;
     }
-    p {
-        font-size: small;
-    }
     #topLeft, #topRight, #bottomLeft, #bottomRight {
-        width: 250px;
+        width: 180px;
     }
     #topLeft, #bottomLeft {
         margin-right: 0;
-    }
-}
-@media (max-width: 576px) {
-    .textContainer {
-        padding: 30px 0 10px 50px;
-    }
-    #topLeft, #topRight, #bottomLeft, #bottomRight {
-        width: 200px;
-    }
-}
-@media (max-width: 380px) {
-    p {
-        font-size: xx-small;
-    }
-}
-@media (max-height: 500px) {
-    p {
-        font-size: 15px;
-    }
-    #topLeft, #topRight {
-        margin-top: 5px;
-    }
-    #bottomLeft, #bottomRight {
-        margin-top: 30px;
-    }
-    #topLeft, #topRight, #bottomLeft, #bottomRight {
-        width: 200px;
-    }
-    #topLeft, #bottomLeft {
-        margin-right: 50px;
     }
 }
