--- a/css/slip.css
+++ b/css/slip.css
@@ -1,6 +1,7 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
 * {
     font-family: "Noto Sans TC";
+    font-weight: 400;
 }
 .object {
     height: 100vh;
@@ -18,7 +19,7 @@
 }
 p {
     font-size: 24px;
-    margin: 0;
+    margin: 3px;
     white-space: pre;
     color: transparent;
     animation: blur 8s ease-out alternate;
@@ -37,6 +38,18 @@ p {
 @media screen and (max-width: 700px) {
     p {
         font-size: 20px;
+        white-space: normal;
+    }
+    .upText {
+        display: inherit;
+    }
+    #upText:before {
+        content: "";
+    }
+}
+@media screen and (max-width: 500px) {
+    p {
+        font-size: 18px;
         white-space: normal;
     }
     .upText {
