--- a/css/start.css
+++ b/css/start.css
@@ -1,6 +1,7 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
 * {
     font-family: "Noto Sans TC";
+    font-weight: 400;
 }
 body {
     height: 100vh;
@@ -25,52 +26,59 @@ p {
 }
 #start {
     width: 300px;
+    margin-top: 1em;
     cursor: pointer;
 }
-@media screen and (max-width: 900px) {
-    #plancovary {
-        width: 180px;
-    }
-    #start {
-        width: 200px;
-    }
-    p {
-        font-size: 20px;
-    }
-}
-@media screen and (max-width: 700px) {
-    #plancovary {
-        width: 150px;
-    }
-    #start {
-        width: 180px;
-    }
-    p {
-        font-size: 20px;
-    }
-}
-@media screen and (max-width: 576px) {
+
+@media screen and (max-width: 565px) {
     .plancovary {
         text-align: center;
-        padding: 5em 0 0 0;
+        padding: 4em 0 3em 0;
     }
     #plancovary {
         width: 200px;
     }
-}
-@media screen and (max-height: 900px) {
-    #upText {
-        margin-top: 5em;
+    p {
+        font-size: 18px;
+        margin: 0;
+    }
+    #bottomText {
+        margin-top: 5px;
     }
     #start {
-        padding-top: 7em;
+        width: 220px;
+        margin-top: 4em;
     }
 }
-@media screen and (max-height: 700px) {
-    #upText {
-        margin-top: 3em;
+@media screen and (max-width: 320px) {
+    .plancovary {
+        text-align: center;
+        padding: 4em 0 3em 0;
+    }
+    #plancovary {
+        width: 180px;
+    }
+    p {
+        font-size: 16px;
+        margin: 0;
+    }
+    #bottomText {
+        margin-top: 5px;
     }
     #start {
-        padding-top: 2em;
+        width: 200px;
+        margin-top: 4em;
+    }
+}
+@media screen and (max-height: 420px) {
+    #plancovary {
+        width: 160px;
+    }
+    p {
+        font-size: 20px;
+    }
+    #start {
+        width: 220px;
+        margin-top: 1em;
     }
 }
