--- a/css/widsom.css
+++ b/css/widsom.css
@@ -1,8 +1,14 @@
 body {
     height: 100vh;
-    background-image: url("../assets/Widsom/background.png");
+    background-image: url("../assets/Widsom/background.jpg");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
-    /* overflow-y: hidden; */
+    background-size: contain;
+    background-color: #080404;
+    overflow-y: hidden;
+}
+@media (max-width: 820px) {
+    body {
+        background-image: url("../assets/Widsom/backgroundMobile.jpg");
+    }
 }
