--- a/css/3-3.css
+++ b/css/3-3.css
@@ -124,19 +124,28 @@ p {
         width: 160px;
     }
 }
-@media screen and (max-width: 565px) and (max-height: 900px) and (min-height: 735px) {
+@media screen and (max-width: 565px) and (max-height: 950px) and (min-height: 735px) {
     .textContainer {
-        padding: 80px 10px 0;
+        padding: 72px 10px 0;
     }
     p {
         font-size: 20px;
+    }
+    #topLeft, #topRight, #bottomLeft, #bottomRight {
+        width: 240px;
+        margin-top: 35px;
+    }
+}
+@media screen and (max-width: 420px) and (max-height: 900px) and (min-height: 735px) {
+    .textContainer {
+        padding: 80px 10px 0;
     }
     #topLeft, #topRight, #bottomLeft, #bottomRight {
         width: 220px;
         margin-top: 35px;
     }
 }
-@media screen and (max-height: 420px) {
+@media screen and (max-height: 430px) {
     .textContainer {
         padding: 56px 0 30px;
         margin: 0;
