--- a/css/2-1.css
+++ b/css/2-1.css
@@ -106,7 +106,7 @@ p {
         width: 160px;
     }
 }
-@media screen and (max-width: 565px) and (max-height: 1000px) and (min-height: 735px) {
+@media screen and (max-width: 565px) and (max-height: 1200px) and (min-height: 735px) {
     .textContainer {
         padding: 72px 10px 24px;
     }
@@ -117,7 +117,12 @@ p {
         margin-bottom: 30px;
     }
     #left, #right {
-        width: 220px;
+        width: 260px;
+    }
+}
+@media screen and (max-width: 459px) and (max-height: 950px) and (min-height: 735px) {
+    #left, #right {
+        width: 260px;
     }
 }
 @media screen and (max-width: 420px) and (max-height: 900px) and (min-height: 735px) {
