--- a/css/2-2.css
+++ b/css/2-2.css
@@ -110,7 +110,7 @@ p {
         width: 160px;
     }
 }
-@media screen and (max-width: 565px) and (max-height: 1000px) and (min-height: 735px) {
+@media screen and (max-width: 565px) and (max-height: 1200px) and (min-height: 735px) {
     .textContainer {
         padding: 72px 40px 24px;
     }
@@ -123,6 +123,11 @@ p {
     #left {
         margin-bottom: 30px;
     }
+    #left, #right {
+        width: 260px;
+    }
+}
+@media screen and (max-width: 459px) and (max-height: 950px) and (min-height: 735px) {
     #left, #right {
         width: 220px;
     }
