--- a/css/3-2.css
+++ b/css/3-2.css
@@ -101,7 +101,7 @@ p {
         width: 130px;
     }
 }
-@media screen and (max-width: 565px) and (max-height: 1000px) and (min-height: 735px) {
+@media screen and (max-width: 565px) and (max-height: 1200px) and (min-height: 735px) {
     .textContainer {
         padding: 72px 48px 24px;
     }
@@ -111,6 +111,11 @@ p {
     #left {
         margin-bottom: 5px;
     }
+    #left, #right {
+        width: 220px;
+    }
+}
+@media screen and (max-width: 459px) and (max-height: 950px) and (min-height: 735px) {
     #left, #right {
         width: 200px;
     }
