--- a/css/3-3.css
+++ b/css/3-3.css
@@ -124,13 +124,19 @@ p {
         width: 160px;
     }
 }
-@media screen and (max-width: 565px) and (max-height: 1000px) and (min-height: 735px) {
+@media screen and (max-width: 565px) and (max-height: 1200px) and (min-height: 735px) {
     .textContainer {
         padding: 72px 10px 0;
     }
     p {
         font-size: 20px;
     }
+    #topLeft, #topRight, #bottomLeft, #bottomRight {
+        width: 260px;
+        margin-top: 35px;
+    }
+}
+@media screen and (max-width: 459px) and (max-height: 950px) and (min-height: 735px) {
     #topLeft, #topRight, #bottomLeft, #bottomRight {
         width: 240px;
         margin-top: 35px;
