--- a/css/3-4.css
+++ b/css/3-4.css
@@ -89,7 +89,7 @@ p {
         width: 160px;
     }
 }
-@media screen and (max-width: 565px) and (max-height: 1000px) and (min-height: 735px) {
+@media screen and (max-width: 565px) and (max-height: 1200px) and (min-height: 735px) {
     .textContainer {
         padding: 72px 10px 24px;
     }
@@ -99,6 +99,11 @@ p {
     #left {
         margin: 0 0 50px;
     }
+    #left, #right {
+        width: 260px;
+    }
+}
+@media screen and (max-width: 459px) and (max-height: 950px) and (min-height: 735px) {
     #left, #right {
         width: 220px;
     }
