--- a/css/1-1.css
+++ b/css/1-1.css
@@ -75,7 +75,7 @@ p {
         width: 200px;
     }
 }
-@media screen and (max-width: 320px) {
+/* @media screen and (max-width: 320px) {
     .textContainer {
         padding: 40px 32px 0;
     }
@@ -158,4 +158,4 @@ p {
     #left, #right {
         width: 140px;
     }
-}
+} */
