--- a/css/1-1.css
+++ b/css/1-1.css
@@ -128,6 +128,21 @@ p {
         margin-right: 8em;
     }
     #left, #right {
+        width: 200px;
+    }
+}
+@media screen and (max-height: 420px) {
+    .textContainer {
+        padding: 56px 0;
+        margin: 0;
+    }
+    p {
+        font-size: 18px;
+    }
+    #left {
+        margin-right: 8em;
+    }
+    #left, #right {
         width: 180px;
     }
 }
