--- a/css/1-1.css
+++ b/css/1-1.css
@@ -74,6 +74,10 @@ p {
     #left, #right {
         width: 180px;
     }
+    .options {
+        display: flex;
+        flex-direction: column;
+    }
 }
 @media screen and (max-width: 320px) {
     .textContainer {
