--- a/css/3-3.css
+++ b/css/3-3.css
@@ -108,6 +108,10 @@ p {
     #topLeft, #bottomLeft {
         margin-right: 0;
     }
+    .options {
+        display: flex;
+        flex-direction: column;
+    }
 }
 @media screen and (max-width: 320px) {
     .textContainer {
