--- a/css/4-1.css
+++ b/css/4-1.css
@@ -91,6 +91,10 @@ p {
     #left, #right {
         width: 240px;
     }
+    .options {
+        display: flex;
+        flex-direction: column;
+    }
 }
 @media screen and (max-width: 320px) {
     .textContainer {
