--- a/css/3-1.css
+++ b/css/3-1.css
@@ -86,6 +86,10 @@ p {
     #left, #right {
         width: 150px;
     }
+    .options {
+        display: flex;
+        flex-direction: column;
+    }
 }
 @media screen and (max-width: 320px) {
     .textContainer {
