--- a/css/environment.css
+++ b/css/environment.css
@@ -1,19 +1,26 @@
+@import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
+* {
+    font-family: "Noto Sans TC";
+    font-weight: 400;
+}
 body {
+    background-color: #080404;
+    overflow-y: hidden;
+}
+.wrapper {
     height: 100vh;
     background-image: url("../assets/Environment/background.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    background-color: #080404;
-    overflow-y: hidden;
 }
 @media screen and (max-width: 820px) {
-    body {
+    .wrapper {
         background-image: url("../assets/Environment/backgroundMobile.jpg");
     }
 }
 @media screen and (max-height: 500px) {
-    body {
+    .wrapper {
         background-image: url("../assets/Environment/background.jpg");
     }
 }
