--- a/css/weakness.css
+++ b/css/weakness.css
@@ -14,6 +14,19 @@ body {
     background-position: center;
     background-size: contain;
 }
+.button {
+    width: 100px;
+    height: 50px;
+    position: absolute;
+    right: 42%;
+    bottom: 7%;
+}
+#seeMore {
+    border-radius: 20px;
+    border: 1px white solid;
+    background-color: transparent;
+    color: white;
+}
 @media screen and (max-width: 820px) {
     .wrapper {
         background-image: url("../assets/Weakness/backgroundMobile.jpg");
