--- a/css/widsom.css
+++ b/css/widsom.css
@@ -14,13 +14,49 @@ body {
     background-position: center;
     background-size: contain;
 }
-@media screen and (max-width: 820px) {
+.content {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    position: absolute;
+    left: 48%;
+    top: 15%;
+}
+#text {
+    width: 450px;
+    margin-bottom: 20px;
+}
+#seeMore {
+    width: 85px;
+    height: auto;
+    border-radius: 20px;
+    border: 1px white solid;
+    background-color: transparent;
+    color: white;
+    cursor: pointer;
+}
+#seeMore:hover {
+    background-color: rgb(255, 255, 255, 0.2);
+}
+@media screen and (max-width: 820px) and (min-height: 501px) {
     .wrapper {
         background-image: url("../assets/Widsom/backgroundMobile.jpg");
+    }
+    .content {
+        left: 40%;
+        text-align: center;
+    }
+    #text {
+        content: url("../assets/Widsom/resultMobile.png");
+        width: 200px;
     }
 }
 @media screen and (max-height: 500px) {
     .wrapper {
         background-image: url("../assets/Widsom/background.jpg");
+    }
+    #text {
+        width: 250px;
+        content: url("../assets/Widsom/result.png");
     }
 }
