--- a/css/widsom.css
+++ b/css/widsom.css
@@ -44,11 +44,33 @@ body {
     }
     .content {
         left: 40%;
-        text-align: center;
+        align-items: flex-end;
     }
     #text {
         content: url("../assets/Widsom/resultMobile.png");
         width: 200px;
+    }
+}
+@media screen and (max-width: 820px) and (min-width: 768px) and (max-height: 1180px) and (min-height: 1024px) {
+    #text {
+        width: 350px;
+    }
+    #seeMore {
+        width: 110px;
+        font-size: 18px;
+    }
+}
+@media screen and (max-width: 459px) and (max-height: 950px) and (min-height: 735px) {
+    .content {
+        left: 35%;
+    }
+    #text {
+        width: 230px;
+    }
+}
+@media screen and (max-width: 350px) {
+    .content {
+        left: 35%;
     }
 }
 @media screen and (max-height: 500px) {
@@ -56,7 +78,15 @@ body {
         background-image: url("../assets/Widsom/background.jpg");
     }
     #text {
-        width: 250px;
+        width: 270px;
         content: url("../assets/Widsom/result.png");
+    }
+    #seeMore {
+        font-size: 12px;
+    }
+}
+@media screen and (max-height: 350px) {
+    #text {
+        width: 220px;
     }
 }
