--- a/css/weakness.css
+++ b/css/weakness.css
@@ -6,6 +6,7 @@
 body {
     background-color: #0A0808;
     overflow-y: hidden;
+    cursor: pointer;
 }
 .wrapper {
     height: 100vh;
@@ -13,19 +14,6 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-}
-.button {
-    width: 100px;
-    height: 50px;
-    position: absolute;
-    right: 42%;
-    bottom: 7%;
-}
-#seeMore {
-    border-radius: 20px;
-    border: 1px white solid;
-    background-color: transparent;
-    color: white;
 }
 @media screen and (max-width: 820px) {
     .wrapper {
