--- a/css/3-1.css
+++ b/css/3-1.css
@@ -12,9 +12,12 @@ body {
     padding-bottom: 4em;
 }
 p {
-    color: #7D7D7D;
     font-size: 22px;
     margin: 0;
+    color: transparent;
+    animation: blur 8s ease-out alternate;
+	-webkit-animation: blur 8s ease-out alternate;
+    animation-fill-mode: forwards;
 }
 #brOne {
     display: none;
@@ -160,4 +163,25 @@ p {
     #left, #right {
         width: 120px;
     }
+}
+
+@keyframes blur {
+	0%      {text-shadow: 0 0 100px #7D7D7D; opacity: 0;}
+	10%	    {text-shadow: 0 0 90px #7D7D7D;}
+	20%	    {opacity: 1;}
+	30%	    {text-shadow: 0 0 0px #7D7D7D;}
+	75%	    {text-shadow: 0 0 0px #7D7D7D;}
+	80%	    {opacity: 1;}
+	90%	    {text-shadow: 0 0 0px #7D7D7D;}
+	100%    {text-shadow: 0 0 0px #7D7D7D; opacity: 1;}
+}
+@-webkit-keyframes blur {
+	0%		{text-shadow: 0 0 100px #7D7D7D; opacity: 0;}
+	10%		{text-shadow: 0 0 90px #7D7D7D;}
+	20%		{opacity: 1;}
+	30%		{text-shadow: 0 0 0px #7D7D7D;}
+	75%		{text-shadow: 0 0 0px #7D7D7D;}
+	80%		{opacity: 1;}
+	90%		{text-shadow: 0 0 0px #7D7D7D;}
+	100%	{text-shadow: 0 0 0px #7D7D7D; opacity: 1;}
 }
