--- a/css/3-3.css
+++ b/css/3-3.css
@@ -29,9 +29,12 @@
     background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 70%, rgba(255, 255, 255, 0) 100%);
 }
 p {
-    color: #FFFFFF;
     font-size: 22px;
     margin: 0;
+    color: transparent;
+    animation: blur 8s ease-out alternate;
+	-webkit-animation: blur 8s ease-out alternate;
+    animation-fill-mode: forwards;
 }
 #upText, #middleText {
     margin-top: 20px;
@@ -193,4 +196,25 @@ p {
     #topLeft, #topRight, #bottomLeft, #bottomRight {
         width: 150px;
     }
+}
+
+@keyframes blur {
+	0%      {text-shadow: 0 0 100px #FFFFFF; opacity: 0;}
+	10%	    {text-shadow: 0 0 90px #FFFFFF;}
+	20%	    {opacity: 1;}
+	30%	    {text-shadow: 0 0 0px #FFFFFF;}
+	75%	    {text-shadow: 0 0 0px #FFFFFF;}
+	80%	    {opacity: 1;}
+	90%	    {text-shadow: 0 0 0px #FFFFFF;}
+	100%    {text-shadow: 0 0 0px #FFFFFF; opacity: 1;}
+}
+@-webkit-keyframes blur {
+	0%		{text-shadow: 0 0 100px #FFFFFF; opacity: 0;}
+	10%		{text-shadow: 0 0 90px #FFFFFF;}
+	20%		{opacity: 1;}
+	30%		{text-shadow: 0 0 0px #FFFFFF;}
+	75%		{text-shadow: 0 0 0px #FFFFFF;}
+	80%		{opacity: 1;}
+	90%		{text-shadow: 0 0 0px #FFFFFF;}
+	100%	{text-shadow: 0 0 0px #FFFFFF; opacity: 1;}
 }
