--- a/css/3-4.css
+++ b/css/3-4.css
@@ -20,9 +20,12 @@ body {
     background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0) 100%);
 }
 p {
-    color: #FFFFFF;
     font-size: 22px;
     margin: 0;
+    color: transparent;
+    animation: blur 8s ease-out alternate;
+	-webkit-animation: blur 8s ease-out alternate;
+    animation-fill-mode: forwards;
 }
 #upText {
     white-space: pre;
@@ -139,4 +142,25 @@ p {
     #left, #right {
         width: 150px;
     }
+}
+
+@keyframes blur {
+	0%      {text-shadow: 0 0 100px #FFFFFF; opacity: 0;}
+	10%	    {text-shadow: 0 0 90px #FFFFFF;}
+	20%	    {opacity: 1;}
+	30%	    {text-shadow: 0 0 0px #FFFFFF;}
+	75%	    {text-shadow: 0 0 0px #FFFFFF;}
+	80%	    {opacity: 1;}
+	90%	    {text-shadow: 0 0 0px #FFFFFF;}
+	100%    {text-shadow: 0 0 0px #FFFFFF; opacity: 1;}
+}
+@-webkit-keyframes blur {
+	0%		{text-shadow: 0 0 100px #FFFFFF; opacity: 0;}
+	10%		{text-shadow: 0 0 90px #FFFFFF;}
+	20%		{opacity: 1;}
+	30%		{text-shadow: 0 0 0px #FFFFFF;}
+	75%		{text-shadow: 0 0 0px #FFFFFF;}
+	80%		{opacity: 1;}
+	90%		{text-shadow: 0 0 0px #FFFFFF;}
+	100%	{text-shadow: 0 0 0px #FFFFFF; opacity: 1;}
 }
